--- a/Grid/Grid Level 1_3/index.html
+++ b/Grid/Grid Level 1_3/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid Level 1_3</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <div class="page">
+      <header>
+        <p>header</p>
+      </header>
+
+      <div class="middle">
+        <aside>
+          <p>sidebar</p>
+        </aside>
+        <main>
+          <p>main content</p>
+        </main>
+      </div>
+      <footer>
+        <p>footer</p>
+      </footer>
+    </div>
+  </body>
 </html>
